--- a/aboutme/aboutme.css
+++ b/aboutme/aboutme.css
@@ -3,17 +3,19 @@ body{
     color: black
 }
 
-p {
+#one {                                             /* The hashtage indicates an ID code to be called in your HTML file. Tells the HTML which attributes to use for the given code that it calls*/
     margin: 30px;
     background: chocolate;
     border: 1px solid black;
     outline: 3px solid black;
     outline-offset: 15px;
-    font-size: 300;    /* changes font size in your HTML file*/
+    font-size: 150px;    /* changes font size in your HTML file*/
+    text-align: center;
 }
 
-p.smallParagraph {
+#two {
     font-size: 15px;    /* another way to change attributes of your HTML file*/
     color: purple;
     text-align: center;
+    font-size: 50px;
 }
