--- a/lesson03/wwr/styles/style.css
+++ b/lesson03/wwr/styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Rock+Salt&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -8,25 +11,40 @@ nav a {
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1 {
     text-align: center;
 }
-#hero-msg h4 {
+#hero-msg, h4, a {
     text-align: center;
+    font-family: "Koulen";
+}
+.home-title {
+    margin-top: 10px;
 }
 .button-box {
     text-align: center;
 }
-main section {
+main section, h2 {
     text-align: center;
+    box-sizing: border-box;
+}
+#home-grid, p {
+    font-family: "Koulen";
 }
 footer {
     text-align: center;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 body {
     background-color: #F68E5F;
+    font-family: "Koulen", "Rock Salt";
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #F5DD90;
@@ -35,8 +53,12 @@ nav a:hover {
     background-color: #396E94;
 }
 .book, .join {
+    font-size: 18px;
     background-color: #F68E5F;
-    color:black
+    color:black;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #F5DD90;
@@ -46,7 +68,13 @@ nav a:hover {
     background-color: #396E94;
 }
 .msg {
+    font-size: .8em;
     background-color: #F5DD90;
+    line-height: 1.5em;
+    padding: 35px;
+}
+.msg p {
+    padding-bottom: 15px;
 }
 footer, footer h3, footer a {
     text-align: left;
@@ -54,12 +82,29 @@ footer, footer h3, footer a {
     color:black
     
 }
+footer .social img {
+    padding-top: 15px;
+}
 footer a:hover {
     background-color: #F68E5F;
 }
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 footer h3 a:hover {
     text-decoration: underline;
+}
+.home-title {
+    font-family: 'Rock Salt';
+    font-size: 2em;
+}
+#logo_link {
+    padding: 5px;
+}
+.card-img {
+    border: 10px solid #396E94;
 }
