Final Layout Changes

--- a/lesson03/wwr/styles/style.css
+++ b/lesson03/wwr/styles/style.css
@@ -6,18 +6,30 @@
     margin: 0 auto;
 }
 
-nav a {
-    text-align: left;
+nav {
     text-align: center;
     color: black;
     text-decoration: none;
     padding: 35px;
+    display: flex;
+    justify-content: space-around;
 }
-#hero-msg h1 {
-    text-align: center;
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
 }
-#hero-msg, h4, a {
+#hero-box{
+    grid-column: 1/4;
+    grid-row:1/3;
+    z-index: -1;
+}
+#hero-msg {
     text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    color: #F68E5F;
     font-family: "Koulen";
 }
 .home-title {
@@ -26,12 +38,15 @@ nav a {
 .button-box {
     text-align: center;
 }
-main section, h2 {
+main section {
     text-align: center;
     box-sizing: border-box;
 }
-#home-grid, p {
+.home-grid {
     font-family: "Koulen";
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
 }
 footer {
     text-align: center;
@@ -48,6 +63,8 @@ body {
 }
 header {
     background-color: #F5DD90;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover {
     background-color: #396E94;
@@ -66,12 +83,17 @@ nav a:hover {
 #background {
     height: 725px;
     background-color: #396E94;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .msg {
     font-size: .8em;
     background-color: #F5DD90;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #F68E5F;
 }
 .msg p {
     padding-bottom: 15px;
@@ -88,8 +110,20 @@ footer .social img {
 footer a:hover {
     background-color: #F68E5F;
 }
-.rivers-card, .camping-card, .rapids-card {
+.rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 .icon {
     width: 80px;
@@ -104,7 +138,65 @@ footer h3 a:hover {
 }
 #logo_link {
     padding: 5px;
+    justify-self: center;
+    align-self: center;
 }
-.card-img {
+.card-img, .mountains {
     border: 10px solid #396E94;
+    transition: transform .5s;
+    box-shadow: 5px 5px 20px #F5DD90;
+    width: 100%
+
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #F5DD90;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
