--- a/positionstyles.css
+++ b/positionstyles.css
@@ -96,29 +96,31 @@
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1021px;
+  
 
 }
 .red4 {
-  width: 325px; 
+  width: 300px; 
   height: 300px; 
   background-color: red; 
   grid-column: 1/2;
-  grid-row: 1/2;
+  grid-row: 1/1;
 } 
 .green4 {
   width: 300px; 
   height: 100px; 
   background-color: green; 
   grid-column: 2/2;
-  grid-row: 1/2;
+  grid-row: 1/1;
+  
 } 
 .yellow4 {
   width: 300px; 
   height: 100px; 
   background-color: gold; 
   grid-column: 2/2;
-  grid-row: 1/2;
+  grid-row: 1/1;
   margin-top: 100px;
 } 
 .blue4 {
@@ -126,7 +128,7 @@
   height: 100px; 
   background-color: blue; 
   grid-column: 2/2;
-  grid-row: 1/2;
+  grid-row: 1/1;
   margin-top: 200px;
   
 } 
@@ -136,7 +138,7 @@
   height: 400px;
 }
 .red5 { 
-  width: 100%; 
+  width: 600px; 
   height: 100px; 
   background-color: red; 
 } 
@@ -148,13 +150,13 @@
 
 } 
 .yellow5 {
-  width: 100%; 
-  height: 325px; 
+  width: 600px; 
+  height: 300px; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100%; 
+  width: 600px; 
   height: 100px; 
   background-color: blue; 
 } 
@@ -190,7 +192,7 @@
   grid-column: 5/6;
   grid-row: 3/6;
   z-index: 2;
-  margin-left: -150px;
+  margin-left: -450px;
   margin-top: -150px;
   
 } 
